# sayless

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  config.toml  justfile
.sqlx/: query-0210656f344eda7b7fa3b3968bdc4d6b54743c02e8df1ca59820d3f7d0dbe790.json  query-03f107257db88fc2d01fb53b8539a80cd6519ea649da42f09c16a85bbce796da.json  query-1af0804bdf9b4ba4ddb6f6b015001adc76b54fcc97c963e8e75438ed28c826c3.json  query-216f328fc0db065504a48ef3beeb6687c8e521a09eabec0bcee781e88f0d65f9.json  query-21991c24ecb1cdab2a6a771e6a2c1a62b677b9dadf7b838be72ceef7084ed6c9.json  query-2aa5054ffbf56e138594c2b51e9d179a95fc1937242805408f1be78626850c77.json  query-2bac69bad4aa7c6d38af3ed946def7eb3a2d6f1c5926de5fb343a0ec55447041.json  query-2f3e400816a8069b08baf5dce9e0252fde7ae9f6dde3e37f4fd1da4e6ae1201f.json  query-32dcd35a098629559ae4f879696139c0a740c2a1bce19f6ebfb4a218458fbf63.json  query-373d5de3a720099f608f0710b265e7a8f3712c37460443847fa285a11f71e58d.json  query-37658b511b44f2ee764f2f62dde4b8b21e3ffb46f0b543c8d8dff7077508ff82.json  query-438b80718e5b6060a7ee44c340452943eec9e26f729c1a94a9bb0083f1223132.json  query-4c34d812d52a91af3be811a799a8e7352a71df3d61e579c9a51d20adc46e09d9.json  query-51eaad3827a068b36e992231d6361505d4ac3054f72eb9eae41900cf77b3c35f.json  query-67d7b659a7d40a20f15fe618736be6741cd5bdc9f1673b07f546634c6aeaae4b.json  query-ac2ec2b0c6b7e9d14b38d4b248b53d507f81d8f91e35e0bd8519aeacd84a1f51.json  query-b159897b11c7f0589e6af86ba70db5c9ba9a229069a4e1da3a247e6047368bcb.json  query-c7cfc83658c6f1794c7a2b5ecdf505a6f18b5d23519e2d71063c86875284a825.json  query-d8c5717632211799a2cf6b2f8d3dd1d4e1ac090728e622d53b6ee4811dc34ab6.json  query-df13b4e74984f787b3fe75732670695d7f76e0772694d034a61bc2235d22c1b8.json  query-e88765d73000fcb467a25f280f00fbd0d58c6aeb1840b2d79c5a04d68916df4d.json  query-f05cbcd36b96ec5c2c003b0c7e72436eb1ce7c0870d130fb3435b8f1c4abcd87.json  query-f1946c2abdcb02dbe9949c2939bb39c92b7e37c3145ec748e30b823657c9312d.json  query-f2d03870de0d5d55b89baf1eb99a7b9ed1591253bb405d17947c0c96ea1545a6.json
db/optional/: origins.sql  strikes.sql  tokens.sql
migrations/: 20230929112532_create_tables.down.sql  20230929112532_create_tables.sql  20230929112532_create_tables.up.sql  20231002065401_create_tokens.down.sql  20231002065417_create_iprecord.down.sql  20231002065417_create_iprecord.up.sql  20231005104255_remove_token_creation_permission.down.sql  20231005104255_remove_token_creation_permission.up.sql
sayless-frontend/: Cargo.toml
sayless-link-moderation/: Cargo.toml
sayless-link-moderation/src/: main.rs
src/: base58.rs  lib.rs  main.rs
src/custom_headers/: accept.rs
src/database/: mod.rs
src/database/tables/: links.rs  mod.rs  origins.rs  strikes.rs  tokens.rs
src/json_schemas/: create_token_params.rs  mod.rs  token_permissions.rs
src/responses/: created_link.rs  link_info.rs  mod.rs  short_link_redirect.rs  token_created.rs
src/routes/: config_info.rs  create_link.rs  create_token.rs  get_link.rs  get_link_info.rs  middleware.rs  mod.rs  revoke_token.rs  status.rs
src/service_config/: ip_recording.rs  mod.rs  token.rs
src/tokens/: mod.rs
test_configs/: config_full.toml  config_iprecording.toml  config_tokens.toml
