[package]
name = "sayless"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
bincode = "1.3.3"
blake3 = "1.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
headers = "0.3.9"
log = { version = "0.4.20", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive", "rc"] }
simple_logger = "4.2.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
toml = "0.8.0"
