[package]
name = "sayless"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["http2", "headers", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
headers = "0.3.9"
mime = "0.3.17"
rand = "0.8.5"
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }
toml = "0.8.0"
tokio = { workspace = true }
sqlx = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }

[workspace]
members = ["sayless-frontend"]

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
simple_logger = "4.2.0"
log = { version = "0.4.20", features = ["serde"] }
dotenvy = "0.15.7"
bincode = "1.3.3"
blake3 = "1.4.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
