[package]
name = "sayless"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.0", features = ["http2", "macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.31", features = ["serde"] }
headers = "0.4.0"
mime = "0.3.17"
rand = "0.9.0"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
tokio = { workspace = true }
sqlx = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
futures-util = "0.3.31"

[workspace]
members = ["sayless-frontend", "sayless-link-moderation"]

[workspace.dependencies]
toml = "0.8.2"
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "chrono", "mysql"] }
simple_logger = "5.0.0"
log = { version = "0.4.20", features = ["serde"] }
dotenvy = "0.15.7"
bincode = "1.3.3"
blake3 = "1.8.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
