[package]
name = "sayless-link-moderation"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.5"
reqwest = { version = "0.11.22", features = ["rustls-tls"] }
tokio = { workspace = true }
sqlx = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
